# aerial-robotics

./: .gitignore  .gitmodules  README.md
lab1/: Copy_of_topSimulate.asv  README.md  circleTopSimulate.asv  circleTopSimulate.m  crossProductEquivalent.asv  dcm2euler.m  eulerTest.asv  eulerTest.m  quadOdeFunction.asv  quadOdeFunction.m  simulateQuadrotorDynamics.asv  simulateQuadrotorDynamics.m  topODE.asv  topSimulate.asv  topSimulate.m
lab2/: attitudeController.m  euler2dcm.m  omegaODETest.m  pd_control.m  rotationMatrix.m  sensorParamsScript.m  simulateQuadrotorControl.m  trajectoryController.m  voltageConverter.m
lab3/: f_dynamics.m  hdCameraSimulator.m  imuSimulator.m  topSimulateControl.m
lab4/cpp_source_files/: a_star2d.cc  depth_first_search2d.cc  depth_first_search2d.h  dijkstra2d.cc  full_stack_planning.cc  polynomial_planning.cc
lab4/matlab_simfiles/: gnssMeasSimulator.m  topSimulate.m  topSimulateControl.m  wahbaSolver.m  wahbaSolverTest.m
lab4/matlab_simfiles/trajectory/: acc.csv
lab5/navtoolbox/: CMakeLists.txt  README.md
lab5/navtoolbox/include/: definitions.h  navtoolbox.h  typedefs.h
lab5/navtoolbox/src/: CMakeLists.txt~  definitions.h~  navtoolbox.cpp
lab5/src/: balloonfinder.cc  structurecomputer.cc
lab5matlab/: camTest.m  crossProductEquivalent.m  estimate3dFeatureLocation.m  h_meas.m  quadOdeFunctionHF.m  simulateQuadrotorDynamicsHF.m  simulateQuadrotorEstimationAndControl.m  topSimulateControl.m
lab5matlab/trajectory/: pos.csv  vel.csv
